[package]
name = "cable-streaming"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = "3.1"
http = "0.2"
quick-xml = { version = "0.22", features = [ "serialize" ] }
reqwest = { version = "0.11", features = [ "json" ] }
serde = { version = "1.0", features = [ "derive" ] }
tokio = { version = "1.17", features = [ "full" ] }
toml = "0.5"
